# fastapi-postgresql

./: README.md  cookiecutter-config-file.yml  cookiecutter.json  pyproject.toml
.github/workflows/: actions.yml  tests.yml
app/crud/: base.py
app/db/: __init__.py  (+2 more)
docker/: Dockerfile  docker-compose.dev.yml
migrations/: env.py
scripts/: worker-start.sh
{{cookiecutter.project_slug}}/: .env  .gitignore  Dockerfile  README.md  alembic.ini  boot.sh  docker-compose.dev.yml  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py  pre_start.py  worker.py
{{cookiecutter.project_slug}}/app/api/: __init__.py  deps.py
{{cookiecutter.project_slug}}/app/api/api_v1/: __init__.py  users.py  utils.py
{{cookiecutter.project_slug}}/app/core/: config.py  security.py
{{cookiecutter.project_slug}}/app/crud/: __init__.py  item.py  user.py
{{cookiecutter.project_slug}}/app/db/: base.py
{{cookiecutter.project_slug}}/app/mail/templates/src/: new_account.mjml
{{cookiecutter.project_slug}}/app/models/: item.py  user.py
{{cookiecutter.project_slug}}/app/schemas/: __init__.py  item.py
{{cookiecutter.project_slug}}/docker/: boot.sh
{{cookiecutter.project_slug}}/migrations/versions/: be9e05d37578_first_revision.py
{{cookiecutter.project_slug}}/scripts/: psql-connect.sh
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/api/api_v1/: test_celery.py  test_items.py  test_login.py  test_users.py
{{cookiecutter.project_slug}}/tests/crud/: test_item.py  test_user.py
{{cookiecutter.project_slug}}/tests/utils/: item.py  user.py
(+4 files in other folders)
